<resources>
    <string name="app_name">RoundRoblx</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_on_internet">Please on Internet</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="round_start_title_1">Spin Wheel And Get Rewards!\nEasy to use robux spin wheel\n\nwelcome to free robux spin wheel Are you eager to the for thrills of authentic spin wheel fresh from the robux slot machine for the game?</string>
    <string name="round_start_title_2">Scratch And Win Rbx Coins\n\nUnlock new scratch cards daily and experience the joy of winning Robux rewards. Are you ready for an exciting adventure? Start scratching now and make every scratch count!</string>
    <string name="round_start_title_3">Robux Calc &amp; Quiz Master\n\nGet free robux counts and to get them more into the game and know the actual robux gratis and the actual robux value and codes as well. If you get the correct answer, you can raise the level.Every time the level goes up, we give you a gift.</string>
    <string name="round_start_title_4">Robx Calculators features\n\n- Rbx Free Calculator\n- Usd To Rbx Converter\n- Fast Robux Counter\n- RBX To Usd Calc\n- TBC To Rbx Converter\n- BC To Rbx Converter\n- OBC To Rbx Converter</string>
    <string name="sibol">Ad</string>
    <string name="do_you_want_to_exit">Do You Want To Exit?</string>
    <string name="please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving">Please spare a Moment To Rate And Give Your Valuable Feedback To Us Before Leaving....</string>
    <string name="no">No</string>
    <string name="yes_exit">Yes, Exit</string>
    <string name="get_daily_robox">Get Daily Robox</string>
    <string name="rbx_to_dollar">RBX To Dollar</string>
    <string name="scratch">Scratch</string>
    <string name="bc_to_rbx">BC To RBX</string>
    <string name="tbc_to_rbx">TBC To RBX</string>
    <string name="obc_to_rbx">OBC To RBX</string>
    <string name="quiz">Quiz</string>
    <string name="spin_wheels">Spin Wheels</string>
    <string name="meme">Meme</string>
    <string name="tips_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="dictionary">Dictionary</string>
    <string name="setting">Setting</string>
    <string name="convert_now">Convert Now</string>
    <string name="you_will_receive">You Will Receive:-</string>
    <string name="done">Done</string>
    <string name="round_rbx_to_dollar_converter_t">Rbx To Dollar Converter</string>
    <string name="round_enter_your_rbx_q">Enter Your Rbx</string>
    <string name="round_enter_number_of_rbx_q_h">Enter Number Of Rbx</string>
    <string name="round_do_to_t">Dollar To Rbx Converter</string>
    <string name="round_enter_your_dollar_q">Enter Your Dollar</string>
    <string name="round_enter_number_of_dollar_q_h">Enter Number Of Dollar</string>
    <string name="round_b_to_r">BC To Rbx Converter</string>
    <string name="round_enter_your_b_q">Enter Your Dollar</string>
    <string name="round_enter_number_of_b_q_h">Enter Number Of Bc</string>
    <string name="round_t_to_r">Tbc To Rbx Converter</string>
    <string name="round_enter_your_t_q">Enter Your Tbc</string>
    <string name="round_enter_number_of_t_q_h">Enter Number Of Tbc</string>
    <string name="round_o_to_r">Obc To Rbx Converter</string>
    <string name="round_enter_your_o_q">Enter Your Obc</string>
    <string name="round_enter_number_of_o_q_h">Enter Number Of Obc</string>
    <string name="error_please">Please %1$s</string>
    <string name="robox_turbo_membership_calculator">Robox Turbo MemberShip Calculator</string>
    <string name="_1_month_900_r">1 Month = 900 R$</string>
    <string name="_1_year_1200_r">1 Year = 1200 R$</string>
    <string name="tbc_stands_for_turbo_membership">Tbc Stands For Turbo Membership:-</string>
    <string name="a_subscription_that_provides_even_morebenefits_and_features_compared_to_tbc">A Subscription That Provides Even MoreBenefits And Features Compared To TBC.</string>
    <string name="robox_outrageous_membership_calculator">Robox Outrageous Membership Calculator</string>
    <string name="_1_month_700_r">1 Month = 700 R$</string>
    <string name="_1_year_1400_r">1 Year = 1400 R$</string>
    <string name="obc_stands_for_outrageous_membership">Obc Stands For Outrageous Membership:-</string>
    <string name="a_premium_subscription_that_grants_exclusive_perks_on_robox">A Premium Subscription That Grants Exclusive Perks On Robox.</string>
    <string name="round_rbx">%1$s Rbx</string>
    <string name="round_dollar">%1$s Dollar</string>
    <string name="scratch_win">Scratch &amp; Win</string>
    <string name="congratulations">Congratulations !</string>
    <string name="you_have_earned">You have Earned</string>
    <string name="collect">Collect</string>
    <string name="spin_now">Spin Now</string>
    <string name="spin_earn_exciting_rewards"><![CDATA[Spin & Earn Exciting Rewards!]]></string>
    <string name="stand_a_chance_to_win_bag_full_of_this_app_s_for_spinning_the_wheel_of_fortune">Stand a chance to win bag full of this app\'s for spinning the wheel of fortune</string>
    <string name="round_please_spin_tomorrow">Please spin tomorrow</string>
    <string name="round_free_spin">Free Spin : %1$s</string>
    <string name="round_added">%1$s Robox Added</string>
    <string name="round_lucky_again">Spin Again</string>
    <string name="round_aa">AA</string>
    <string name="round_aa_d">AA is an acronym for Admin Abuse, which is when an administrator misuses their administrative powers.</string>
    <string name="round_13">13+</string>
    <string name="round_13_d">13+ means that something is only accessible or recommended to players who are aged 13 or over.</string>
    <string name="round_1337">1337</string>
    <string name="round_1337_d">1337 is another way to type the word LEET, as 1 looks like L, 3 looks like E and 7 looks like T. When used in Roblox, 1337 usually means elite, which is the word that leet comes from. 1337 can also refer</string>
    <string name="round_abc_d">ABC isn\'t an acronym, and doesn\'t mean anything specific. It is a word that people use to respond to a request from another Roblox player. For example, one player might say ABC for free gear!,</string>
    <string name="round_abc">ABC</string>
    <string name="round_afk">AFK</string>
    <string name="round_afk_d">AFK is an acronym for the phrase away from keyboard. Away from keyboard means, quite literally, that a player is going to be away from their computer and not available for a period of</string>
    <string name="round_alias">Alias</string>
    <string name="round_in_d">In Roblox, alias refers to aliases set through the alias feature. The alias feature allows players to set an alias - meaning a nickname - for their friends. Aliases are only visible to those who</string>
    <string name="round_alt">Alt</string>
    <string name="round_in">In Roblox, alt is a shortened form of the word alternate account. An alternate account is another Roblox account that a player uses that isn\'t a their main account. For example, if a player had two</string>
    <string name="round_annually">Annually</string>
    <string name="round_in_roblox">In Roblox, annually means the same as it does in the real word: that something happens once a year. If a subscription to Roblox Premium is charged annually, that means you pay once a</string>
    <string name="round_beta">BETA</string>
    <string name="round_in_roblox_beta">In Roblox, beta refers to a version of a game, or other object like an asset, that is available to play or use as a trial because it isn\'t yet fully finished or tested. Games and assets in a beta phase are</string>
    <string name="round_brb">BRB</string>
    <string name="round_brb_d">BRB is short for be right back, which means quite literally that a player will be unavailable for a short period of time (e.g. 30 seconds) but they will be right back. For example, if a player is leaving</string>
    <string name="round_chile">Chile</string>
    <string name="round_chile_d">In Roblox, chile can mean one of two things. It can mean chill: as in, chilled out and relaxed. Or it can mean child: as in a young person.</string>
    <string name="round_dec">Dec</string>
    <string name="in_roblox_the_word_dec">In Roblox, the word Dec is used before numbers and words in an attempt to bypass the chat filter. Because Roblox picks up Dec as December, it may mistakenly allow certain banned phrases or</string>
    <string name="round_disc">Disc</string>
    <string name="round_disc_d">Disc is a shortened form of the word Discord, which refers to the chat application. Discord is a banned word on Roblox to help protect members of the community from scams and inappropriate</string>
    <string name="round_e_e">e.e</string>
    <string name="round_in_roblox_e">In Roblox, e.e or e_e is a smilie (i.e. it\'s meant to look like a face) that signifies boredom or exhaustion.</string>
    <string name="round_fe">FE</string>
    <string name="round_in_roblox_fe_">In Roblox, FE is an acronym for Filtering Enabled. When filtering is enabled for a game, it means that changes made on the client aren\'t replicated on the server. This prevents cheaters from inserting</string>
    <string name="round_ffs">FFS</string>
    <string name="round_in_roblox_ffs">In Roblox, FFS is short for the phrase for fudge sake. This is a figure of speech that is used to express frustration or annoyance. Sometimes fudge is replaced with a much more profane word.</string>
    <string name="round_lel">Lel</string>
    <string name="round_in_roblox_lel">In Roblox, lel is a more playful and sarcastic way to say lol, which means laughing out loud. This means lel is often used to when something is funny or amusing.</string>
    <string name="round_limited_u">Limited(U)</string>
    <string name="round_in_roblox_limited">In Roblox, Limited (U) (meaning Limited Unique) items are items that only have a limited quantity available before they are discontinued. For example, a Limited (U) hat may only be sold 5,000</string>
    <string name="round_gfx">GFX</string>
    <string name="round_in_roblox_gfx">In Roblox, GFX has two meanings. Its first, and most simple, is a shortened form of the word graphics. Its second meaning refers to high-quality rendered images of Roblox</string>
    <string name="round_gg">GG</string>
    <string name="round_in_roblox_gg">In Roblox, GG is short for the phrase good game, which is the gaming equivalent of the phrase good job or nice. It is often used at the end of games to congratulate the other team. It may also be used</string>
    <string name="round_hr">HR</string>
    <string name="round_in_roblox_hr">In Roblox, HR is an acronym for the phrase High Rank, which refers to players who have high ranks on a server (i.e. they have more power and access to more features) or group.</string>
    <string name="round_lmad">LMaD</string>
    <string name="win_free_robux">Win Free Robux</string>
    <string name="get_your_robux_by_following_these_instructions">Get Your Robux By Following These Instructions:</string>
    <string name="please_follow_the_step_by_step_process_instructions_below"><![CDATA[Please Follow The Step-By-Step Process &\nInstructions Below…]]></string>
    <string name="step_1">Step 1:</string>
    <string name="give_5_stars_ratings_with_review">Give 5 Stars Ratings With Review.</string>
    <string name="give_5_stars">Give 5 Stars</string>
    <string name="level">Level</string>
    <string name="_1">1</string>
    <string name="start_now">Start Now</string>
</resources>