<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardBackgroundColor="@color/white_bg"
    app:cardCornerRadius="18dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roundTextTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/round_regular"
            android:text="@string/do_you_want_to_exit"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roundTextBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="50"
            android:fontFamily="@font/round_regular"
            android:text="@string/please_spare_a_moment_to_rate_and_give_your_valuable_feedback_to_us_before_leaving"
            android:textAlignment="center"
            android:textColor="@color/black_a_50"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundTextTop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            style="@style/buttonSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/round_h_m"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/round_t_m"
            android:background="@drawable/round_button_a_20_bg"
            android:elevation="15dp"
            android:text="@string/no"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/buttonYes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonYes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            style="@style/buttonSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/round_h_m"
            android:layout_marginBottom="@dimen/round_t_m"
            android:background="@drawable/round_button_bg"
            android:elevation="15dp"
            android:text="@string/yes_exit"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonNo"
            app:layout_constraintTop_toBottomOf="@id/roundTextBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>