<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Panel.BeginBrainTextActivity">

    <include
        android:id="@+id/roundAppBar"
        layout="@layout/app_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/round_t_m"
        app:layout_constraintBottom_toTopOf="@id/buttonLayoutHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundAppBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/roundBeginTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/round_h_m"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/round_regular"
                android:includeFontPadding="false"
                android:text="@string/win_free_robux"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/roundBeginTitle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/round_h_m"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/round_regular"
                android:includeFontPadding="false"
                android:text="@string/get_your_robux_by_following_these_instructions"
                android:textColor="@color/black_a_50"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundBeginTitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/roundBeginTitle3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/round_h_m"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/round_regular"
                android:includeFontPadding="false"
                android:text="@string/please_follow_the_step_by_step_process_instructions_below"
                android:textColor="@color/black_a_50"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundBeginTitle2" />

            <LinearLayout
                android:id="@+id/layoutStep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/round_h_m"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_word_svg_bg"
                android:orientation="vertical"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundBeginTitle3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/roundStepLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/round_regular"
                    android:includeFontPadding="false"
                    android:text="@string/step_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/roundStepLevel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/round_regular"
                    android:includeFontPadding="false"
                    android:text="@string/give_5_stars_ratings_with_review"
                    android:textColor="@color/black_a_50"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roundBeginTitle" />

                <LinearLayout
                    android:id="@+id/roundLayoutStarHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_edit_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="14dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_stars" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/round_regular"
                        android:includeFontPadding="false"
                        android:text="@string/give_5_stars"
                        android:textColor="@color/black_a_40"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/roundBeginTitle" />


                </LinearLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/round_h_m"
                android:layout_marginTop="22dp"
                android:background="@drawable/round_word_svg_bg"
                android:orientation="vertical"
                android:padding="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutStep1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/roundLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/round_regular"
                    android:includeFontPadding="false"
                    android:text="@string/level"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/roundLevelNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/round_regular"
                    android:includeFontPadding="false"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/roundProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:progress="50"
                    android:progressBackgroundTint="@color/start_color"
                    android:secondaryProgressTint="@color/white"
                    app:indicatorColor="@color/start_color"
                    app:indicatorTrackGapSize="0dp"
                    app:layout_constraintTop_toBottomOf="@id/roundLevelNumber"
                    app:trackCornerRadius="25dp"
                    app:trackStopIndicatorSize="0dp"
                    app:trackThickness="12dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/roundLevelNumberShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/round_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roundProgressBar"
                    tools:text="588/5000" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/roundStartNow"
                    style="@style/buttonSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_button_bg"
                    android:paddingHorizontal="16dp"
                    android:text="@string/start_now"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roundLevelNumberShow" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/buttonLayoutHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/headLineHolder"
            layout="@layout/layout_round_bottom_view" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>