<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    app:cardBackgroundColor="@color/white_bg"
    app:cardCornerRadius="18dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/roundImageCongratulations"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            android:src="@drawable/round_canvas_congratulations"
            android:layout_height="0dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roundCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/round_regular"
            android:text="@string/congratulations"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginHorizontal="@dimen/round_h_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundImageCongratulations" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roundYouHaveEarned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/round_regular"
            android:text="@string/you_have_earned"
            android:layout_marginHorizontal="@dimen/round_h_m"
            android:textAlignment="center"
            android:textColor="@color/black_a_50"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundCongratulations" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roundMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/round_regular"
            android:layout_marginHorizontal="@dimen/round_h_m"
            tools:text="500"
            android:textAlignment="center"
            android:textColor="@color/black_a_50"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundYouHaveEarned" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClam"
            style="@style/buttonSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:background="@drawable/round_button_bg"
            android:elevation="15dp"
            android:text="@string/collect"
            android:layout_marginHorizontal="@dimen/round_h_m"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundMoney" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>